[gd_scene load_steps=3 format=3 uid="uid://dxjf750rw0utl"]

[ext_resource type="Script" uid="uid://bytcaa2bweu5k" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://clv04lpa8t52k" path="res://icon.svg" id="1_hghv2"]

[node name="Enemy" type="Node2D" groups=["Enemies"]]
script = ExtResource("1_1f0kj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(65, 64)
texture = ExtResource("1_hghv2")

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
process_mode = 3
offset_top = 128.0
offset_right = 129.0
offset_bottom = 155.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("1_hghv2")
texture_pressed = ExtResource("1_hghv2")
texture_hover = ExtResource("1_hghv2")

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
